fix: remove border from logo * style: add hover opacity effect to header * fix: update image alt text * refactor: various z-index fixes * refactor: change how header underline is handled

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -17,5 +17,13 @@
     .logo {
         width: rem(44);
         padding: unset;
+        @include hover {
+            @include hoverOpacity;
+            & > span {
+                &:before {
+                    display: none !important;
+                }
+            }
+        }
     }
 }
