--- a/src/components/Nav/components/MobileNav.module.scss
+++ b/src/components/Nav/components/MobileNav.module.scss
@@ -22,17 +22,28 @@
             height: 1px;
             top: unset;
             bottom: rem(-22);
-            z-index: 0;
             @include dashBorder;
             transform: unset;
             @include laptop {
                 display: none;
             }
         }
-        & > a > span {
-            &:before,
-            &:after {
-                display: none;
+        & > a {
+            @include addTargetArea;
+            & > span {
+                &:before {
+                    display: none !important;
+                }
+                &:after {
+                    width: calc(100% + rem(8)) !important;
+                }
+            }
+
+            @include hover {
+                color: color(common, 'primary') !important;
+                & > span:first-child {
+                    color: color(common, 'white');
+                }
             }
         }
     }
