--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -89,7 +89,7 @@
         height: 100%;
         top: 0;
         left: 0;
-        z-index: 0;
+        z-index: -1;
         background-color: color(common, 'white');
         @include borderRadius;
     }
@@ -101,7 +101,7 @@
         height: 100%;
         top: rem(6);
         left: rem(6);
-        z-index: -1;
+        z-index: -2;
         background-color: color(common, 'black');
         @include borderRadius(10);
     }
@@ -217,6 +217,13 @@
                 display: block;
             }
         }
+    }
+}
+
+@mixin hoverOpacity {
+    @include hover {
+        opacity: 0.75;
+        @include transition(opacity);
     }
 }
 
